# CognitiveTechniqueMapper

./: .env.example  .gitignore  AGENTS-old.md  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
config/: database.yaml  models.yaml  providers.yaml  settings.yaml
data/: state.json  techniques.json
docs/: cli-contrib.md
prompts/: compare_candidates.txt  detect_technique.txt  diagnose_selection.txt  explain_logic.txt  feedback.txt  generate_plan.txt  registry.yaml  simulate_technique.txt
src/: cli.py
src/cli/: __init__.py  __main__.py  io.py  renderers.py  reporting.py  runtime.py  state.py  utils.py
src/core/: config_loader.py  feedback_manager.py  llm_gateway.py  logging_setup.py  orchestrator.py  preprocessor.py
src/db/: chroma_client.py  feedback_repository.py  preference_repository.py  sqlite_client.py
src/services/: comparison_service.py  config_editor.py  config_service.py  data_initializer.py  embedding_gateway.py  explanation_service.py  feedback_service.py  plan_generator.py  preference_service.py  prompt_service.py  simulation_service.py  technique_catalog.py  technique_selector.py  technique_utils.py
src/workflows/: compare_candidates.py  (+5 more)
tests/: conftest.py  test_chroma_client.py  test_cli_admin_commands.py  test_cli_commands.py  test_cli_helpers.py  test_cli_integration.py  test_cli_reporting.py  test_cli_runtime.py  test_comparison_service.py  test_config_editor.py  test_config_service.py  test_data_initializer.py  test_db.py  test_embedding_gateway.py  test_explanation_service.py  test_feedback_repository.py  test_feedback_service.py  test_llm_gateway.py  test_logging_setup.py  test_plan_generator.py  test_preference_service.py  test_prompt_service.py  test_prompts.py  test_simulation_service.py  test_technique_catalog.py  test_technique_selector.py  test_technique_utils.py  test_workflow_wrappers.py  test_workflows.py
(+7 files in other folders)
